force-app/main/default/objects/Quote/fields/ARTL_Address_and_Feasibility_Status__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Address_and_Feasibility_Status__c</fullName>
    <label>Address and Feasibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Address Uploaded</fullName>
            </value>
            <value>
                <fullName>Coordinate Validations Completed</fullName>
            </value>
            <value>
                <fullName>Feasibility in Progress</fullName>
            </value>
            <value>
                <fullName>Feasibility Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>