force-app/main/default/objects/Quote/fields/ARTL_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ARTL_CreatedDate__c</fullName>
    <formula>TEXT(DATEVALUE(CreatedDate)) &amp; &quot;T&quot; &amp; LEFT(TEXT(TIMEVALUE(CreatedDate)), 8)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARTL_CreatedDate</label>
    <type>Text</type>
</CustomField>