force-app/main/default/objects/Quote/fields/ARTL_Current_User_OV_Approver__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Current_User_OV_Approver__c</fullName>
    <formula>ARTL_OV_Approver__c ==  $User.Id</formula>
    <label>Current User OV Approver</label>
    <type>Checkbox</type>
</CustomField>