force-app/main/default/objects/Quote/fields/ARTL_DOAApproved__c.field-meta.xml
<CustomField>
    <fullName>ARTL_DOAApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOA Approved</label>
    <type>Checkbox</type>
</CustomField>