force-app/main/default/objects/Quote/fields/ARTL_Effective_Quote_Total__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Effective_Quote_Total__c</fullName>
    <formula>vlocity_cmt__EffectiveOneTimeTotal__c + Tax + vlocity_cmt__EffectiveRecurringTotal__c + ARTL_EffectiveAnnualRecurringTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Quote Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>