force-app/main/default/objects/Quote/fields/ARTL_EffectiveAnnualRecurringTotal__c.field-meta.xml
<CustomField>
    <fullName>ARTL_EffectiveAnnualRecurringTotal__c</fullName>
    <label>Effective Annual Recurring Total</label>
    <summarizedField>QuoteLineItem.ARTL_EffectiveAnnualRecurringTotal__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>