force-app/main/default/objects/Quote/fields/ARTL_ePCN_Approval_Number__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ePCN_Approval_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ePCN Approval Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>