force-app/main/default/objects/Quote/fields/ARTL_LSI_Count__c.field-meta.xml
<CustomField>
    <fullName>ARTL_LSI_Count__c</fullName>
    <label>LSI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>