force-app/main/default/objects/Quote/fields/ARTL_NBA_Account__c.field-meta.xml
<CustomField>
    <fullName>ARTL_NBA_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NBA Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (NBA Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>