force-app/main/default/objects/Quote/fields/ARTL_OV_Approver__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OV_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OV Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>OV</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>ApproverQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>