force-app/main/default/objects/Quote/fields/ARTL_OV_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OV_Assigned_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OV Assigned Date</label>
    <type>DateTime</type>
</CustomField>