force-app/main/default/objects/Quote/fields/ARTL_OV_Time_Spent_In_Days__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OV_Time_Spent_In_Days__c</fullName>
    <formula>IF( NOT(ISBLANK(ARTL_OV_Assigned_Date__c)) ,  
  TODAY() - DATEVALUE(ARTL_OV_Assigned_Date__c),  0  )</formula>
    <label>OV Time Spent In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>