force-app/main/default/objects/Quote/fields/ARTL_OVRemarks__c.field-meta.xml
<CustomField>
    <fullName>ARTL_OVRemarks__c</fullName>
    <label>OV Remarks</label>
    <type>TextArea</type>
</CustomField>