force-app/main/default/objects/Quote/fields/ARTL_PO_Total__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PO_Total__c</fullName>
    <label>PO Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>