force-app/main/default/objects/Quote/fields/ARTL_QNeedCapexApproval__c.field-meta.xml
<CustomField>
    <fullName>ARTL_QNeedCapexApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Capex Approval</label>
    <type>Checkbox</type>
</CustomField>