force-app/main/default/objects/Quote/fields/ARTL_QNeedDOAApproval__c.field-meta.xml
<CustomField>
    <fullName>ARTL_QNeedDOAApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need DOA Approval</label>
    <type>Checkbox</type>
</CustomField>