force-app/main/default/objects/Quote/fields/ARTL_QOVRejectionReason__c.field-meta.xml
<CustomField>
    <fullName>ARTL_QOVRejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Document related</fullName>
            </value>
            <value>
                <fullName>Document related - Customer is Minor</fullName>
            </value>
            <value>
                <fullName>POA Related - POA copy not clear</fullName>
            </value>
            <value>
                <fullName>POA Related - POA not allowed</fullName>
            </value>
            <value>
                <fullName>POI Related - POI Copy not Clear</fullName>
            </value>
            <value>
                <fullName>POI Related - POI Copy not Complete</fullName>
            </value>
            <value>
                <fullName>POI Related - POI not allowed</fullName>
            </value>
            <value>
                <fullName>MNP - Competition Bill copy customer name vs punching Customer name different ARC/OTC charges mismatch between attached PO V/s punched in system</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>