force-app/main/default/objects/Quote/fields/ARTL_Quote_Members_Count__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Quote_Members_Count__c</fullName>
    <label>Quote Members Count</label>
    <summaryForeignKey>vlocity_cmt__QuoteMember__c.vlocity_cmt__QuoteId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>