force-app/main/default/objects/Quote/fields/ARTL_ReliesOnValidationError__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ReliesOnValidationError__c</fullName>
    <label>ReliesOn Validation Error</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>