force-app/main/default/objects/Quote/fields/ARTL_ValidateAttributeFieldStatus__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ValidateAttributeFieldStatus__c</fullName>
    <label>Validate Attribute Field Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>