force-app/main/default/objects/Quote/fields/CApex_approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>CApex_approval_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CApex approval Flag</label>
    <type>Checkbox</type>
</CustomField>