force-app/main/default/objects/Quote/fields/Capex_Approver__c.field-meta.xml
<CustomField>
    <fullName>Capex_Approver__c</fullName>
    <label>Capex Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>