force-app/main/default/objects/Quote/fields/DOA_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>DOA_Approval_Level__c</fullName>
    <label>DOA Approval Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>