force-app/main/default/objects/Quote/fields/DOA_Approver__c.field-meta.xml
<CustomField>
    <fullName>DOA_Approver__c</fullName>
    <label>DOA Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>