force-app/main/default/objects/Quote/fields/isPMequalsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>isPMequalsCurrentUser__c</fullName>
    <formula>Opportunity.PM__c  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPMequalsCurrentUser</label>
    <type>Checkbox</type>
</CustomField>