force-app/main/default/objects/Quote/fields/PM_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Email__c</fullName>
    <formula>PM__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Email</label>
    <type>Text</type>
</CustomField>