force-app/main/default/objects/Quote/fields/PM_Name__c.field-meta.xml
<CustomField>
    <fullName>PM_Name__c</fullName>
    <formula>PM__r.FirstName  + &apos; &apos; + PM__r.LastName</formula>
    <label>PM Name</label>
    <type>Text</type>
</CustomField>