force-app/main/default/objects/Quote/fields/PM_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>PM_Team_Lead__c</fullName>
    <formula>PM__r.Manager.FirstName + &apos; &apos; +  PM__r.Manager.LastName</formula>
    <label>PM Team Lead</label>
    <type>Text</type>
</CustomField>