force-app/main/default/objects/Quote/fields/PM_Team_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>PM_Team_Lead_Email__c</fullName>
    <formula>PM__r.Manager.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Team Lead Email</label>
    <type>Text</type>
</CustomField>