force-app/main/default/objects/Quote/fields/PM_Team_Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>PM_Team_Lead_Phone__c</fullName>
    <formula>PM__r.Manager.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Team Lead Phone</label>
    <type>Text</type>
</CustomField>