force-app/main/default/objects/Quote/fields/PO_Term__c.field-meta.xml
<CustomField>
    <fullName>PO_Term__c</fullName>
    <label>PO Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>