force-app/main/default/objects/Quote/fields/PO_Value__c.field-meta.xml
<CustomField>
    <fullName>PO_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PO Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>