force-app/main/default/objects/Quote/fields/testing__c.field-meta.xml
<CustomField>
    <fullName>testing__c</fullName>
    <label>testing</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>