force-app/main/default/objects/Quote/fields/vlocity_cmt__Type__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Shifting</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Rate Revision</fullName>
            </value>
            <value>
                <fullName>Rebilling</fullName>
            </value>
            <value>
                <fullName>L1-L3 Construct Change</fullName>
            </value>
            <value>
                <fullName>PO Renewal</fullName>
            </value>
            <value>
                <fullName>LSI Transfer</fullName>
            </value>
            <value>
                <fullName>Hardware Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>