force-app/main/default/objects/Quote/recordTypes/vlocity_cmt__MasterQuote.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__MasterQuote</fullName>
    <active>true</active>
    <description>Use master quote for quoting large multi-service point, multi-site or multi-subscriber customers when you need to break the large quote into a collection of sub-quotes.</description>
    <label>Master Quote</label>
</RecordType>