force-app/main/default/objects/Quote/validationRules/ARTL_StatusChangeFromDOAApprovedToDOARej.validationRule-meta.xml
<ValidationRule>
    <fullName>ARTL_StatusChangeFromDOAApprovedToDOARej</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(
ISPICKVAL(PRIORVALUE(Status), &quot;DOA Approved&quot;),ISPICKVAL(Status, &quot;DOA Rejected&quot;)),
AND(
ISPICKVAL(PRIORVALUE(Status), &quot;DOA Rejected&quot;),ISPICKVAL(Status, &quot;DOA Approved&quot;)))</errorConditionFormula>
    <errorMessage>Status can&apos;t change from DOA Approved to DOA Rejected or vice versa.</errorMessage>
</ValidationRule>