force-app/main/default/objects/Quote/listViews/OV_Team_Quotes.listView-meta.xml
<ListView>
    <fullName>OV_Team_Quotes</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ARTL_Current_User_OV_Approver__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Assigned to OV,OV In Progress</value>
    </filters>
    <label>Pending Quotes for OV Team</label>
</ListView>