force-app/main/default/objects/Quote/listViews/Pending_Quotes_for_OV_Approval.listView-meta.xml
<ListView>
    <fullName>Pending_Quotes_for_OV_Approval</fullName>
    <columns>QUOTE.NAME</columns>
    <columns>QUOTE.ISSYNCING</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.SUBTOTAL</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QUOTE.STATUS</field>
        <operation>equals</operation>
        <value>Assigned to OV,OV In Progress</value>
    </filters>
    <label>Pending Quotes for OV Approval</label>
</ListView>